Add role-based auth, admin panel, profile, and user bookings
Co-authored-by: amritpritampani <amritpritampani@gmail.com>